--- a/angular.json
+++ b/angular.json
@@ -44,18 +44,14 @@
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
+              "budgets": [{
+                "type": "anyComponentStyle",
+                "maximumWarning": "6kb"
+              }],
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -151,9 +147,9 @@
           },
           "configurations": {
             "production": {
-              "project": "projects/ng-busy/ng-package.prod.json"
-            ,              "tsConfig": "projects/ng-busy/tsconfig.lib.prod.json"
-}
+              "project": "projects/ng-busy/ng-package.prod.json",
+              "tsConfig": "projects/ng-busy/tsconfig.lib.prod.json"
+            }
           }
         },
         "test": {
